k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: entebus
  labels:
    environment: prod
    team: backend-team
