k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: entebus-server
  namespace: entebus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: entebus-server
  template:
    metadata:
      labels:
        app: entebus-server
        tier: backend
    spec:
      containers:
        - name: entebus-server
          image: ghcr.io/nixbug/entebus-server:latest
          ports:
            - containerPort: 8080
