k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: entebus-server-svc
  namespace: entebus
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app: entebus-server
